--- a/camscanner-clone/package.json
+++ b/camscanner-clone/package.json
@@ -13,11 +13,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "jspdf": "^2.5.1",
-    "react-image-crop": "^11.0.5"
+    "react-image-crop": "^11.0.5",
+    "tesseract.js": "^5.1.0",
+    "idb": "^8.0.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "vite-plugin-pwa": "^0.20.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17",
