--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # DeepSeek API Key for AI text enhancement
 # Get your API key from: https://platform.deepseek.com/
-DEEPSEEK_API_KEY=sk-4cbe064b35774d5685a24831a12cabae
+DEEPSEEK_API_KEY=
 
 # Vite Configuration
 VITE_API_URL=/api
